Feat:Website Content Dynamic , Accounts DEsign Implemented and ready to go

--- a/src/website/templates/website/product_detail.html
+++ b/src/website/templates/website/product_detail.html
@@ -8,151 +8,60 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
                         <!-- User this HTML for Slider -->
-                        <section class="banner-section">
-                            <div class="container">
-                                <div class="vehicle-detail-banner banner-content clearfix">
-                                    <div class="banner-slider">
-                                        <div class="slider slider-nav thumb-image slick-vertical slick-initialized slick-slider">
-
-                                            <div class="slick-list draggable" style="height: 498px;">
-                                                <div class="slick-track"
-                                                     style="opacity: 1; height: 1826px; transform: translate3d(0px, -498px, 0px);">
-                                                    <div class="thumbnail-image slick-slide slick-cloned" tabindex="-1"
-                                                         style="width: 177px;" data-slick-index="-3" id=""
-                                                         aria-hidden="true">
+                 <!-- User this HTML for Slider -->
+                                <section class="banner-section">
+                                    <div class="container">
+                                        <div class="vehicle-detail-banner banner-content clearfix">
+                                            <div class="banner-slider">
+                                                <div class="slider slider-nav thumb-image">
+                                                    <div class="thumbnail-image">
                                                         <div class="thumbImg bg-white">
-                                                            <a href="#!" tabindex="-1"><img
-                                                                    src="{% static 'website/images/product/product10.png' %}"
+                                                            <a href="#!"><img src="{% static 'website/images/product/product1.png' %}"
                                                                     alt="image_not_found"></a>
                                                         </div>
                                                     </div>
-                                                    <div class="thumbnail-image slick-slide slick-cloned" tabindex="-1"
-                                                         style="width: 177px;" data-slick-index="-2" id=""
-                                                         aria-hidden="true">
+                                                    <div class="thumbnail-image">
                                                         <div class="thumbImg bg-white">
-                                                            <a href="#!" tabindex="-1"><img
-                                                                    src="{% static 'website/images/product/product43.png' %}"
+                                                            <a href="#!"><img src="{% static 'website/images/product/product1.png' %}"
                                                                     alt="image_not_found"></a>
                                                         </div>
                                                     </div>
-                                                    <div class="thumbnail-image slick-slide slick-cloned" tabindex="-1"
-                                                         style="width: 177px;" data-slick-index="-1" id=""
-                                                         aria-hidden="true">
+                                                    <div class="thumbnail-image">
                                                         <div class="thumbImg bg-white">
-                                                            <a href="#!" tabindex="-1"><img
-                                                                    src="{% static 'website/images/product/product40.png' %}"
+                                                            <a href="#!"><img src="{% static 'website/images/product/product1.png' %}"
                                                                     alt="image_not_found"></a>
                                                         </div>
                                                     </div>
-                                                    <div class="thumbnail-image slick-slide slick-current slick-active"
-                                                         tabindex="0" style="width: 177px;" data-slick-index="0"
-                                                         aria-hidden="false">
+                                                    <div class="thumbnail-image">
                                                         <div class="thumbImg bg-white">
-                                                            <a href="#!" tabindex="0"><img
-                                                                    src="{% static 'website/images/product/product56.png' %}"
-                                                                    alt="image_not_found"></a>
-                                                        </div>
-                                                    </div>
-                                                    <div class="thumbnail-image slick-slide slick-active" tabindex="0"
-                                                         style="width: 177px;" data-slick-index="1" aria-hidden="false">
-                                                        <div class="thumbImg bg-white">
-                                                            <a href="#!" tabindex="0"><img
-                                                                    src="{% static 'website/images/product/product10.png' %}"
-                                                                    alt="image_not_found"></a>
-                                                        </div>
-                                                    </div>
-                                                    <div class="thumbnail-image slick-slide slick-active" tabindex="0"
-                                                         style="width: 177px;" data-slick-index="2" aria-hidden="false">
-                                                        <div class="thumbImg bg-white">
-                                                            <a href="#!" tabindex="0"><img
-                                                                    src="{% static 'website/images/product/product43.png' %}"
-                                                                    alt="image_not_found"></a>
-                                                        </div>
-                                                    </div>
-                                                    <div class="thumbnail-image slick-slide" tabindex="-1"
-                                                         style="width: 177px;" data-slick-index="3" aria-hidden="true">
-                                                        <div class="thumbImg bg-white">
-                                                            <a href="#!" tabindex="-1"><img
-                                                                    src="{% static 'website/images/product/product40.png' %}"
-                                                                    alt="image_not_found"></a>
-                                                        </div>
-                                                    </div>
-                                                    <div class="thumbnail-image slick-slide slick-cloned" tabindex="-1"
-                                                         style="width: 177px;" data-slick-index="4" id=""
-                                                         aria-hidden="true">
-                                                        <div class="thumbImg bg-white">
-                                                            <a href="#!" tabindex="-1"><img
-                                                                    src="{% static 'website/images/product/product56.png' %}"
-                                                                    alt="image_not_found"></a>
-                                                        </div>
-                                                    </div>
-                                                    <div class="thumbnail-image slick-slide slick-cloned" tabindex="-1"
-                                                         style="width: 177px;" data-slick-index="5" id=""
-                                                         aria-hidden="true">
-                                                        <div class="thumbImg bg-white">
-                                                            <a href="#!" tabindex="-1"><img
-                                                                    src="{% static 'website/images/product/product10.png' %}"
-                                                                    alt="image_not_found"></a>
-                                                        </div>
-                                                    </div>
-                                                    <div class="thumbnail-image slick-slide slick-cloned" tabindex="-1"
-                                                         style="width: 177px;" data-slick-index="6" id=""
-                                                         aria-hidden="true">
-                                                        <div class="thumbImg bg-white">
-                                                            <a href="#!" tabindex="-1"><img
-                                                                    src="{% static 'website/images/product/product43.png' %}"
-                                                                    alt="image_not_found"></a>
-                                                        </div>
-                                                    </div>
-                                                    <div class="thumbnail-image slick-slide slick-cloned" tabindex="-1"
-                                                         style="width: 177px;" data-slick-index="7" id=""
-                                                         aria-hidden="true">
-                                                        <div class="thumbImg bg-white">
-                                                            <a href="#!" tabindex="-1"><img
-                                                                    src="{% static 'website/images/product/product40.png' %}"
+                                                            <a href="#!"><img src="{% static 'website/images/product/product1.png' %}"
                                                                     alt="image_not_found"></a>
                                                         </div>
                                                     </div>
                                                 </div>
-                                            </div>
-                                        </div>
 
-                                        <div class="slider slider-for slick-initialized slick-slider">
-                                            <div class="slick-list draggable">
-                                                <div class="slick-track" style="opacity: 1; width: 2012px;">
-                                                    <div class="slider-banner-image img_moving_anim1 bg-white slick-slide slick-current slick-active"
-                                                         data-slick-index="0" aria-hidden="false" tabindex="0"
-                                                         style="width: 473px; position: relative; left: 0px; top: 0px; z-index: 999; opacity: 1;">
-                                                        <img src="{% static 'website/images/product/product56.png' %}"
-                                                             alt="image_not_found">
+                                                <div class="slider slider-for card">
+                                                    <div class="slider-banner-image img_moving_anim1 text-center bg-white">
+                                                        <img src="{% static 'website/images/product/product1.png' %}"
+                                                            alt="image_not_found">
                                                     </div>
-                                                    <div class="slider-banner-image img_moving_anim1 bg-white slick-slide"
-                                                         data-slick-index="1" aria-hidden="true" tabindex="-1"
-                                                         style="width: 473px; position: relative; left: -503px; top: 0px; z-index: 998; opacity: 0;">
-                                                        <img src="{% static 'website/images/product/product10.png' %} "
-                                                             alt="image_not_found">
+                                                    <div class="slider-banner-image img_moving_anim1 bg-white">
+                                                        <img src="{% static 'website/images/product/product1.png' %}"
+                                                            alt="image_not_found">
                                                     </div>
-                                                    <div class="slider-banner-image img_moving_anim1 bg-white slick-slide"
-                                                         data-slick-index="2" aria-hidden="true" tabindex="-1"
-                                                         style="width: 473px; position: relative; left: -1006px; top: 0px; z-index: 998; opacity: 0;">
-                                                        <img src="{% static 'website/images/product/product43.png' %} "
-                                                             alt="image_not_found">
+                                                    <div class="slider-banner-image img_moving_anim1 bg-white">
+                                                        <img src="{% static 'website/images/product/product1.png' %}"
+                                                            alt="image_not_found">
                                                     </div>
-                                                    <div class="slider-banner-image img_moving_anim1 bg-white slick-slide"
-                                                         data-slick-index="3" aria-hidden="true" tabindex="-1"
-                                                         style="width: 473px; position: relative; left: -1509px; top: 0px; z-index: 998; opacity: 0;">
-                                                        <img src="{% static 'website/images/product/product40.png' %} "
-                                                             alt="image_not_found">
+                                                    <div class="slider-banner-image img_moving_anim1 bg-white">
+                                                        <img src="{% static 'website/images/product/product1.png' %}"
+                                                            alt="image_not_found">
                                                     </div>
                                                 </div>
                                             </div>
-
-
                                         </div>
                                     </div>
-                                </div>
-                            </div>
-                        </section>
+                                </section>
                         <!-- End User this HTML for Slider -->
                     </div>
                     <div class="col-lg-6">
