--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -1,47 +1,59 @@
 {% extends 'website/base.html' %}
-{% load static %}
 
 {% load i18n %}
-{% load account %}
+{% load account socialaccount %}
 {% load static %}
+{% load socialaccount %}
 {% load crispy_forms_tags %}
 
-{% block title %}{% trans "Password Reset" %}{% endblock %}
+{% block subtitle %}Login Now{% endblock %}
 
-{% block base_top_nav %}{% endblock %}
+
 {% block content %}
 
-    <div class="my-4 row justify-content-center">
-        <div class="col-11 col-sm-8">
-            <div class="text-center">
-                <div>
-                    {% if user.is_authenticated %}
-                        <p class="m-0 card-text">{% include "account/snippets/already_logged_in.html" %}</p>
-                    {% endif %}
-                </div>
-            </div>
-            <hr class="border border-danger">
-            <div class="card">
-                <div class="card-header text-center">
-                    <p class="card-title m-0">{% trans "Password Reset" %}</p>
+    <section class="login-page section-b-space">
+        <div class="container">
+            <div class="row justify-content-center my-4">
+                <div class="col-5 card my-4">
+                    <div class="theme-card">
+                        <div class="p-2">
+                            <h4 class="text-center mt-4">Account Reset Form</h4>
 
-                </div>
-                <div class="card-body theme-card">
-                    <form method="POST" action="{% url 'account_reset_password' %}" class="theme-form">
-                        {% csrf_token %}
-                        <div class="form-group">
-                        {{ form|crispy }}
+                            <div class="btn-group my-4" role="group" style="border: 2px solid #e2e1e1"
+                                 aria-label="Basic example">
+                                <a href="{% url 'account_login' %}" type="button" class="btn btn-white">Login</a>
+                                <a href="{% url 'account_signup' %}" class="btn custom_btn  text-white ">Signup</a>
+                            </div>
+                            <form  action="{% url 'account_reset_password' %}" method="POST" >
 
-                        </div>
-                        <input type="submit" class="btn btn-solid" value="{% trans 'Reset My Password' %}"/>
-                    </form>
+                                {% csrf_token %}
 
-                    <p class="mt-2">Please contact us if you have any trouble resetting your
+                                {{ form | crispy }}
+
+                                {% if redirect_field_value %}
+                                    <input type="hidden" name="{{ redirect_field_name }}"
+                                           value="{{ redirect_field_value }}"/>
+                                {% endif %}
+
+                                <div class="row">
+                                    <button type="submit" class="btn custom_btn  text-white ">Reset My Password</button>
+                                </div>
+
+                            </form>
+                            <hr>
+                            <div class="row card p-2 mb-4 shadow">
+                                <p class="mt-2">Please contact us if you have any trouble resetting your
                         password, forgotten your password? Enter your e-mail address above, and we'll send you an e-mail
                         allowing you to reset it.</p>
+                            </div>
+
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
+
 
 {% endblock %}
+
