--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -1,6 +1,6 @@
 
 
-{% extends 'base.html' %}
+{% extends 'website/base.html' %}
 
 {% load i18n %}
 {% load account %}
@@ -10,49 +10,40 @@
 {% block title %}{% trans "Change Password" %}{% endblock %}
 
 {% block base_top_nav %}{% endblock %}
-{% block dont_include_details %}
+{% block content %}
 
-   {% include 'messages.html' %}
+    <section class="login-page section-b-space">
+        <div class="container">
+            <div class="row justify-content-center my-4">
+                <div class="col-5 card my-4">
 
-    <div class="my-4 row justify-content-center">
-        <div class="col-11 col-sm-8">
-            <div class="text-center">
-                {% if user.is_authenticated %}
-                    {% include "account/snippets/already_logged_in.html" %}
-                {% endif %}
-            </div>
+                    <div class="theme-card">
+                        <div class="p-2">
+                            <h4 class="text-center mt-4">Change Password Form</h4>
+                            {% include 'messages.html' %}
+                            {% if token_fail %}
+                                {% url 'account_reset_password' as passwd_reset_url %}
+                                <p>{% blocktrans %}The password reset link was invalid, possibly because it has already
+                                    been
+                                    used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>
+                                    .{% endblocktrans %}</p>
+                            {% else %}
 
-            <hr class="border border-danger">
-
-            <div class="card">
-                <div class="card-header text-center">
-                    <p class="card-title m-0">{% trans "Password Reset" %}</p>
-
-                </div>
-                <div class="card-body">
-
-                    <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}
-                        {% trans "Change Password" %}{% endif %}</h1>
-
-                    {% if token_fail %}
-                        {% url 'account_reset_password' as passwd_reset_url %}
-                        <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been
-                            used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>
-                            .{% endblocktrans %}</p>
-                    {% else %}
-                        {% if form %}
-                            <form method="POST" action="{{ action_url }}">
-                                {% csrf_token %}
-                                {{ form | crispy }}
-                                <input type="submit" name="action" class="btn btn-primary" value="{% trans 'change password' %}"/>
-                            </form>
-                        {% else %}
-                            <p>{% trans 'Your password is now changed.' %}</p>
-                        {% endif %}
-                    {% endif %}
+                                {% if form %}
+                                    <form method="POST" action="{{ action_url }}">
+                                        {% csrf_token %}
+                                        {{ form | crispy }}
+                                        <button type="submit" name="action" class="btn btn-warning text-white">Change Password</button>
+                                    </form>
+                                {% else %}
+                                    <p>{% trans 'Your password is now changed.' %}</p>
+                                {% endif %}
+                            {% endif %}
+                            <hr>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-
+    </section>
 {% endblock %}
