--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'website/base.html' %}
 
 {% load i18n %}
 {% load account %}
@@ -8,32 +8,23 @@
 {% block title %}{% trans "Change Password" %}{% endblock %}
 
 {% block base_top_nav %}{% endblock %}
-{% block dont_include_details %}
+{% block content %}
 
-   {% include 'messages.html' %}
-
-    <div class="my-4 row justify-content-center">
-        <div class="col-11 col-sm-8">
-            <div class="text-center">
-                {% if user.is_authenticated %}
-                    {% include "account/snippets/already_logged_in.html" %}
-                {% endif %}
-            </div>
-
-            <hr class="border border-danger">
-
-            <div class="card">
-                <div class="card-header text-center">
-                    <p class="card-title m-0">{% trans "Password Reset" %}</p>
-
-                </div>
-                <div class="card-body">
-
-                    <p>{% trans 'Your password is now changed.' %}</p>
-
+    <section class="login-page section-b-space">
+        <div class="container">
+            <div class="row justify-content-center my-4">
+                <div class="col-5 card my-4">
+                    <div class="theme-card">
+                        <div class="p-2">
+                            <h4 class="text-center mt-4">Change Password</h4>
+                            <div class="row card p-2 mb-4 shadow">
+                                <p class="text-center">{% trans 'Your password is now successfully changed.' %}</p>
+                                <a href="{% url 'account_login' %}" class="btn btn-warning text-white">Go Back to Login</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-
+    </section>
 {% endblock %}
