--- a/templates/account/password_set.html
+++ b/templates/account/password_set.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'website/base.html' %}
 
 {% load i18n %}
 {% load account %}
@@ -8,7 +8,7 @@
 {% block title %}{% trans "Set password" %}{% endblock %}
 
 {% block base_top_nav %}{% endblock %}
-{% block dont_include_details %}
+{% block content %}
 
    {% include 'messages.html' %}
 
@@ -19,16 +19,12 @@
                     {% include "account/snippets/already_logged_in.html" %}
                 {% endif %}
             </div>
-
             <hr class="border border-danger">
-
             <div class="card">
                 <div class="card-header text-center">
                     <p class="card-title m-0">{% trans "Set Password" %}</p>
-
                 </div>
                 <div class="card-body">
-
                     <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
                         {% csrf_token %}
                         {{ form | crispy }}
