--- a/templates/account/verified_email_required.html
+++ b/templates/account/verified_email_required.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'website/base.html' %}
 
 {% load i18n %}
 {% load static %}
@@ -6,7 +6,7 @@
 {% block title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
 
 {% block base_top_nav %}{% endblock %}
-{% block dont_include_details %}
+{% block content %}
 
    {% include 'messages.html' %}
 
